fixed gap

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ h1 {
     display: grid;
     grid-template-columns: repeat(auto-fill, 48%);
     grid-auto-rows: 1fr;
-    gap: 20px;
+    gap: 3vh;
 }
 
 .card__article {
